apps/base/karakeep/karakeep.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: karakeep-system
  labels:
    networking.tinyrack.net/isolation: enabled
