apps/base/karakeep/karakeep.meilisearch.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karakeep-meilisearch
  namespace: karakeep-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      containers:
        - env:
            - name: MEILI_NO_ANALYTICS
              value: "true"
            - name: MEILI_DB_PATH
              value: /meili_data/data-1.41.ms
            - name: MEILI_UPGRADE_DB
              value: "true"
          image: getmeili/meilisearch:v1.54.3@sha256:e95d49060218260d5c843f8dd70850c8fbbdf9c5148addccbd45eaa246d874d3
          name: meilisearch
          volumeMounts:
            - mountPath: /meili_data
              name: meilisearch
      volumes:
        - name: meilisearch
          persistentVolumeClaim:
            claimName: meilisearch-storage
