apps/base/karakeep/karakeep.chrome.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karakeep-chrome-service
  namespace: karakeep-system
spec:
  ports:
    - port: 9222
      protocol: TCP
      targetPort: 9222
  selector:
    app: chrome
  type: ClusterIP
