apps/base/karakeep/karakeep.meilisearch.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karakeep-meilisearch-service
  namespace: karakeep-system
spec:
  ports:
    - port: 7700
      protocol: TCP
      targetPort: 7700
  selector:
    app: meilisearch
