apps/base/karakeep/karakeep.web.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karakeep-web-service
  namespace: karakeep-system
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: karakeep-web
  type: ClusterIP
